INCLUDE_DIRECTORIES(
${ITK_SOURCE_DIR}/Examples/StreamedWatershedSegmentation/ParameterFileParser
)

LINK_LIBRARIES (
param
ITKBasicFilters
ITKCommon
VXLNumerics
ITKIO
)

ADD_EXECUTABLE(itkAntiAliasBinaryImageFilterExample itkAntiAliasBinaryImageFilterExample.cxx)
ADD_EXECUTABLE(itkSampleDataGenerator itkSampleDataGenerator.cxx)
