PROJECT(AntiAliasBinaryImageFilter)

INCLUDE_DIRECTORIES(
${AntiAliasBinaryImageFilter_SOURCE_DIR}
${AntiAliasBinaryImageFilter_SOURCE_DIR}/../StreamedWatershedSegmentation/ParameterFileParser
)

LINK_LIBRARIES (
param
ITKAlgorithms
ITKBasicFilters
ITKCommon
VXLNumerics
ITKIO
)

ADD_EXECUTABLE(itkAntiAliasBinaryImageFilterExample itkAntiAliasBinaryImageFilterExample.cxx)
ADD_EXECUTABLE(itkSampleDataGenerator itkSampleDataGenerator.cxx)
