SET(DICOMAppFiles main.cxx)

ADD_EXECUTABLE(DICOMApp ${DICOMAppFiles})

IF(UNIX)
  IF (NOT ITK_USE_SYSTEM_STDLIB)
  TARGET_LINK_LIBRARIES (DICOMApp -lCio )
  ENDIF(NOT ITK_USE_SYSTEM_STDLIB)
  TARGET_LINK_LIBRARIES (DICOMApp  -lm )
ENDIF(UNIX)

TARGET_LINK_LIBRARIES(DICOMApp DICOMParser ITKIO ITKCommon)
