INCLUDE (${CMAKE_ROOT}/Modules/FindOpenGL.cmake)
INCLUDE (${CMAKE_ROOT}/Modules/FindGLU.cmake)
INCLUDE (${CMAKE_ROOT}/Modules/FindITK.cmake)
INCLUDE (${CMAKE_ROOT}/Modules/FindFLTK.cmake)
INCLUDE (${USE_ITK_FILE})

INCLUDE_DIRECTORIES(
${ITK_SOURCE_DIR}/Auxiliary/FltkImageViewer
${ITK_SOURCE_DIR}/Example/GPDM3DTest
${ITK_BINARY_DIR}/Auxiliary/FltkImageViewer
${FLTK_INCLUDE_PATH}
${OPENGL_INCLUDE_PATH}
${CMAKE_HOME_DIRECTORY}
)

LINK_DIRECTORIES(
${ITK_BINARY_DIR}/Code/Common
${ITK_BINARY_DIR}/Code/BasicFilters
${ITK_BINARY_DIR}/Code/IO
${ITK_BINARY_DIR}/Code/Numerics/vxl
${ITK_BINARY_DIR}/Auxiliary/FltkImageViewer
${ITK_BINARY_DIR}/Utilities/MetaIO
${ITK_BINARY_DIR}/Utilities/png
${ITK_BINARY_DIR}/Utilities/zlib
${FLTK_LIB_PATH}
)

LINK_LIBRARIES (
ITKBasicFilters 
ITKIO
FltkImageViewer
${FLTK_LIBRARY}
${OPENGL_LIBRARY}
${GLU_LIBRARY}
)


SET(GPDM2DTest_SRCS
GPDM2DTest.cpp
MySegmentation.cxx
)

SET(GPDM2DTest_FLTK_SRCS
MyTestAppUI.fl
)

ADD_EXECUTABLE(GPDM2DTest   ${GPDM2DTest_SRCS})

IF(HAS_FLTK)
FLTK_WRAP_UI(GPDM2DTest ${GPDM2DTest_FLTK_SRCS})
ENDIF(HAS_FLTK)

